<resources>
    <string name="app_name">Planning Poker</string>
    <string name="edit_message">Enter a message</string>
    <string name="github_url">Github username</string>
    <string name="button_send">List repositories</string>
    <string name="button_poker">Play Poker</string>
    <string name="button_github">Github</string>
    <string name="button_deck_normal">Standard</string>
    <string name="button_deck_fib">Fibonacci</string>
    <string name="button_deck_tshirt">T-Shirt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display_cards">Pick a card</string>
    <string name="title_github_updates">GitHub Updates</string>
    <color name="magenta">#FF00FF</color>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_deck">Select a deck</string>
    <string name="title_activity_display_select_desk">DisplaySelectDeskActivity</string>
    <string name="title_activity_select_card">SelectCardActivity</string>

    <string name="button_card_0">0</string>
    <string name="button_card_inf">∞</string>
    <string name="button_card_q">\?</string>
    <string name="button_card_coffee">coffee</string>

    <string name="button_fib_1">1</string>
    <string name="button_fib_2">2</string>
    <string name="button_fib_3">3</string>
    <string name="button_fib_5">5</string>
    <string name="button_fib_8">8</string>
    <string name="button_fib_13">13</string>
    <string name="button_fib_21">21</string>
    <string name="button_fib_34">34</string>
    <string name="button_fib_55">55</string>
    <string name="button_fib_89">89</string>
    <string name="button_fib_144">144</string>

    <string name="button_normal_05">½</string>
    <string name="button_normal_1">1</string>
    <string name="button_normal_2">2</string>
    <string name="button_normal_3">3</string>
    <string name="button_normal_5">5</string>
    <string name="button_normal_8">8</string>
    <string name="button_normal_13">13</string>
    <string name="button_normal_20">20</string>
    <string name="button_normal_40">40</string>
    <string name="button_normal_100">100</string>

    <string name="button_ts_xs">XS</string>
    <string name="button_ts_s">S</string>
    <string name="button_ts_m">M</string>
    <string name="button_ts_l">L</string>
    <string name="button_ts_xl">XL</string>
    <string name="button_ts_xxl">XXL</string>
    <string name="title_activity_display_enter_github">DisplayEnterGithubActivity</string>
    <string name="title_activity_display_github">DisplayGithubActivity</string>
    <string name="title_activity_display_updates">DisplayUpdatesActivity</string>

</resources>
